deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: caseflow
  labels:
    pod-security.kubernetes.io/enforce: restricted
